tests/istio/oidc-authservice/overlays/application/test_data/expected/default_app.k8s.io_v1beta1_application_oidc-authservice.yaml
apiVersion: app.k8s.io/v1beta1
kind: Application
metadata:
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/instance: oidc-authservice-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: oidc-authservice
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  name: oidc-authservice
spec:
  addOwnerRef: true
  componentKinds:
  - group: apps
    kind: StatefulSet
  - group: core
    kind: Service
  - group: core
    kind: PersistentVolumeClaim
  - group: networking.istio.io
    kind: EnvoyFilter
  descriptor:
    description: Provides OIDC-based authentication for Kubeflow Applications, at
      the Istio Gateway.
    keywords:
    - oidc
    - authservice
    - authentication
    links:
    - description: About
      url: https://github.com/kubeflow/kubeflow/tree/master/components/oidc-authservice
    - description: Docs
      url: https://www.kubeflow.org/docs/started/k8s/kfctl-existing-arrikto
    maintainers:
    - email: yanniszark@arrikto.com
      name: Yannis Zarkadas
    owners:
    - email: yanniszark@arrikto.com
      name: Yannis Zarkadas
    type: oidc-authservice
    version: v1beta1
  selector:
    matchLabels:
      app.kubernetes.io/component: oidc-authservice
      app.kubernetes.io/instance: oidc-authservice-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: oidc-authservice
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
