tests/istio/oidc-authservice/overlays/application/test_data/expected/istio-system_~g_v1_configmap_oidc-authservice-parameters.yaml
apiVersion: v1
data:
  application_secret: pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
  client_id: ldapdexapp
  namespace: istio-system
  oidc_auth_url: ""
  oidc_provider: ""
  oidc_redirect_uri: ""
  skip_auth_uri: ""
  userid-header: ""
  userid-prefix: ""
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/instance: oidc-authservice-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: oidc-authservice
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  name: oidc-authservice-parameters
  namespace: istio-system
