tests/istio/oidc-authservice/overlays/application/test_data/expected/istio-system_~g_v1_persistentvolumeclaim_authservice-pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/instance: oidc-authservice-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: oidc-authservice
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  name: authservice-pvc
  namespace: istio-system
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
