tests/istio/oidc-authservice/overlays/application/test_data/expected/istio-system_~g_v1_service_authservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/instance: oidc-authservice-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: oidc-authservice
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  name: authservice
  namespace: istio-system
spec:
  ports:
  - name: http-authservice
    port: 8080
    targetPort: http-api
  publishNotReadyAddresses: true
  selector:
    app: authservice
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/instance: oidc-authservice-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: oidc-authservice
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  type: ClusterIP
